// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers discPlayer should handle CHANGE_CURRENT_TIME 1`] = `
Object {
  "currentTime": 1000,
  "discPic": "",
  "duration": 0,
  "isDiscSpinning": false,
  "isRodOn": false,
  "soundTrack": "",
  "title": "",
}
`;

exports[`reducers discPlayer should handle CHANGE_DISC 1`] = `
Object {
  "currentTime": 0,
  "discPic": "233",
  "duration": 0,
  "isDiscSpinning": false,
  "isRodOn": false,
  "soundTrack": "",
  "title": "",
}
`;

exports[`reducers discPlayer should handle CHANGE_DURATION 1`] = `
Object {
  "currentTime": 0,
  "discPic": "",
  "duration": 1000,
  "isDiscSpinning": false,
  "isRodOn": false,
  "soundTrack": "",
  "title": "",
}
`;

exports[`reducers discPlayer should handle CHANGE_SOUNDTRACK 1`] = `
Object {
  "currentTime": 0,
  "discPic": "",
  "duration": 0,
  "isDiscSpinning": false,
  "isRodOn": false,
  "soundTrack": "233",
  "title": "",
}
`;

exports[`reducers discPlayer should handle CHANGE_TITLE 1`] = `
Object {
  "currentTime": 0,
  "discPic": "",
  "duration": 0,
  "isDiscSpinning": false,
  "isRodOn": false,
  "soundTrack": "",
  "title": "233",
}
`;

exports[`reducers discPlayer should handle DISC_START_SPIN 1`] = `
Object {
  "currentTime": 0,
  "discPic": "",
  "duration": 0,
  "isDiscSpinning": true,
  "isRodOn": false,
  "soundTrack": "",
  "title": "",
}
`;

exports[`reducers discPlayer should handle DISC_STOP_SPIN 1`] = `
Object {
  "currentTime": 0,
  "discPic": "",
  "duration": 0,
  "isDiscSpinning": false,
  "isRodOn": false,
  "soundTrack": "",
  "title": "",
}
`;

exports[`reducers discPlayer should handle ROD_OFF 1`] = `
Object {
  "currentTime": 0,
  "discPic": "",
  "duration": 0,
  "isDiscSpinning": false,
  "isRodOn": false,
  "soundTrack": "",
  "title": "",
}
`;

exports[`reducers discPlayer should handle ROD_ON 1`] = `
Object {
  "currentTime": 0,
  "discPic": "",
  "duration": 0,
  "isDiscSpinning": false,
  "isRodOn": true,
  "soundTrack": "",
  "title": "",
}
`;

exports[`reducers discPlayer should handle initial state 1`] = `
Object {
  "currentTime": 0,
  "discPic": "",
  "duration": 0,
  "isDiscSpinning": false,
  "isRodOn": false,
  "soundTrack": "",
  "title": "",
}
`;

exports[`reducers discPlayer should handle unknown action type 1`] = `
Object {
  "currentTime": 0,
  "discPic": "",
  "duration": 0,
  "isDiscSpinning": false,
  "isRodOn": false,
  "soundTrack": "",
  "title": "",
}
`;
